# bazel-build-failure

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package-lock.json  package.json
promise-spawn-demo/: README.md  index.js  package-lock.json  package.json
